export class DataSet {
  constructor(
    public readonly text: Uint8Array,
    public readonly pattern: Uint8Array
  ) {}
}
